force-app/main/default/objects/Post__c/fields/Caption__c.field-meta.xml
<CustomField>
    <fullName>Caption__c</fullName>
    <label>Caption</label>
    <type>TextArea</type>
</CustomField>