force-app/main/default/objects/Post__c/fields/Platform_Img__c.field-meta.xml
<CustomField>
    <fullName>Platform_Img__c</fullName>
    <formula>CASE(Platform_Name__c,
  &apos;Instagram&apos;, LEFT($Api.Partner_Server_URL_260, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;/resource/InstagramLogo&apos;,
  &apos;Facebook&apos;, LEFT($Api.Partner_Server_URL_260, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;/resource/FacebookLogo&apos;,
  LEFT($Api.Partner_Server_URL_260, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;/resource/LinkedIn_Icon&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform_Img</label>
    <type>Text</type>
</CustomField>