force-app/main/default/objects/Post__c/fields/Platform_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Name__c</fullName>
    <formula>IF( ISPICKVAL(Platform_Setting__r.Platform__c, &apos;Facebook_Platform&apos;),&apos;Facebook&apos;, 
  IF( ISPICKVAL( Platform_Setting__r.Platform__c , &apos;LinkedIn_Platform&apos;) , &apos;LinkedIn&apos;,&apos;&apos;)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform_Name</label>
    <type>Text</type>
</CustomField>