force-app/main/default/objects/Post__c/fields/Platform_Setting__c.field-meta.xml
<CustomField>
    <fullName>Platform_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Platform Setting</label>
    <referenceTo>Platform_Setting__c</referenceTo>
    <relationshipLabel>Posts</relationshipLabel>
    <relationshipName>Posts</relationshipName>
    <type>Lookup</type>
</CustomField>